# dataclassbase

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  lint.sh  pyproject.toml  readthedocs.yaml
.github/workflows/: check_and_deploy.yml  py_lint_test.yml
dataclassbase/: __init__.py
docs/source/: api.rst  conf.py  index.rst
scripts/: build.sh  doc.sh  lint_test.sh
tests/: test_dataclassbase.py
tests/dataclassbase_tests/: __init__.py  fields.py  test_dataclassmeta.py  test_field_provider.py  test_modifiers.py  test_typeconstrained_field.py
