# based on https://github.com/pypa/sampleproject/blob/main/pyproject.toml
[build-system]
requires = ["setuptools", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclassbase"
description = ""
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
keywords = []

dynamic = ["version"]

dependencies = []


# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[project.optional-dependencies]
docs = ["setuptools-scm"]

# configure ruff
[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "B", # bugbear
]

ignore = [
    "B905"
]

[tool.ruff.format]
quote-style = "single"

# configure mypy
[tool.mypy]
python_version = "3.14"
strict = true

[tool.setuptools_scm]
